<resources>
    <string name="app_name">Tournament Organiser</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="next">Next</string>
    <string name="test">Test</string>
    <string name="view">View</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="participants">Participants</string>
    <string name="new_tournament">New Tournament</string>
    <string name="participant">Participant</string>
    <string name="add_participant">Add Participant</string>
</resources>
